--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Blogpost</title>
 </head>
 <body>
@@ -11,6 +12,8 @@
     <h1>Heading del post</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis ullam maxime perferendis perspiciatis reiciendis, aut eos modi sint excepturi dolorum porro magnam iusto eveniet exercitationem iure corporis culpa ea?</p>
+
+    <script src="app/app.js"></script>
 
 </body>
 </html>
