--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,13 @@
     <title>Blogpost</title>
 </head>
 <body>
-    
-    <h1>Heading del post</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis ullam maxime perferendis perspiciatis reiciendis, aut eos modi sint excepturi dolorum porro magnam iusto eveniet exercitationem iure corporis culpa ea?</p>
+    <div id="container">
+        <div id="post">
+            <h1>Heading del post</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis ullam maxime perferendis perspiciatis reiciendis, aut eos modi sint excepturi dolorum porro magnam iusto eveniet exercitationem iure corporis culpa ea?</p>
+        </div>
+    </div>
 
     <script src="app/app.js"></script>
 
