Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,11 @@
 <body>
 
     <div id="container">
+
+        <div id="cabecera">
+            Cabecera
+        </div>
+
         <div id="post">
             <h1>Heading del post</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis ullam maxime perferendis perspiciatis reiciendis, aut eos modi sint excepturi dolorum porro magnam iusto eveniet exercitationem iure corporis culpa ea?</p>
