--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
 
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
 
         <div id="post">
@@ -21,6 +21,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis ullam maxime perferendis perspiciatis reiciendis, aut eos modi sint excepturi dolorum porro magnam iusto eveniet exercitationem iure corporis culpa ea?</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid commodi saepe facere repellat nostrum voluptatum exercitationem eius nisi magnam, natus iusto placeat. Iure praesentium tenetur repellat, expedita iste aut.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, sint sequi vitae eius voluptas vel porro temporibus. Quas magnam, veritatis beatae nostrum, velit quis aspernatur facilis explicabo iure consequuntur officia.</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 
