--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
     <div id="container">
 
         <div id="cabecera">
+            <img width="100px" src="images/logo.jpg" alt="">
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
