Testing stash command

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid commodi saepe facere repellat nostrum voluptatum exercitationem eius nisi magnam, natus iusto placeat. Iure praesentium tenetur repellat, expedita iste aut.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, sint sequi vitae eius voluptas vel porro temporibus. Quas magnam, veritatis beatae nostrum, velit quis aspernatur facilis explicabo iure consequuntur officia.</p>
             <p>suscribete y dale like</p>
+            <p>Another awesome paragraph (testing stash command)</p>
         </div>
 
         <div id="footer">
